# drf_ecommerce_shop

./: .dockerignore  .env.example  .gitignore  LICENSE  README.md  docker-compose.yml  make_migrations.sh  migrate.sh  pyproject.toml
backend/: Dockerfile  manage.py
backend/apps/accounts/: managers.py  models.py  serializers.py  urls.py  views.py
backend/apps/accounts/migrations/: 0001_initial.py
backend/apps/common/: apps.py  managers.py  models.py  paginations.py  permissions.py  utils.py
backend/apps/profiles/: apps.py  models.py  urls.py  views.py
backend/apps/profiles/migrations/: 0001_initial.py
backend/apps/sellers/: apps.py  models.py  urls.py  views.py
backend/apps/sellers/migrations/: 0001_initial.py
backend/apps/shop/: apps.py  filters.py  models.py  schema_examples.py  serializers.py  signals.py  tasks.py  urls.py  views.py
backend/apps/shop/migrations/: 0001_initial.py  0002_product_average_rating.py
backend/core/: settings.py  urls.py  wsgi.py
nginx/: Dockerfile  app.conf
