[project]
name = "drf_react_ecommerce"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.14"
dependencies = [
    "adrf>=0.1.12",
    "django==6.0.1",
    "django-autoslug>=1.9.9",
    "django-cors-headers>=4.9.0",
    "django-filter>=25.2",
    "djangorestframework>=3.16.1",
    "djangorestframework-simplejwt>=5.5.1",
    "djangorestframework-stubs>=3.16.6",
    "drf-orjson-renderer>=1.8.0",
    "drf-spectacular>=0.29.0",
    "gunicorn>=23.0.0",
    "pillow>=12.1.0",
    "psycopg>=3.3.2",
    "uvicorn>=0.40.0",
]
